OO-3295: update velocity to velocity engine 2.0, remove oro dependency